// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expnse 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    2.35 kr
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multi expnses 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totalling 
    156,416,565.16 kr
  </h1>
</div>
`;
